# pythontest

./: D02_game.py  D02_key.py  D02_main.py  D02_player.py
D01/: alarm.py  functional_purse.py  split_booty.py  test.py
D02/: game.py  key.py  main.py  player.py
D03/: deploy.yml  deploy2.yml  exploit_script  hosts  pyproject.toml
D03/evilcorp_hacked/host2Clone/tmp/d03/: evilcorp_hacked.html
D03/ex00/: buildexploit.sh  exploit.py  pyproject.toml  requirements.txt
D03/ex01/: buildconsumer.sh  consumer.py  producer.py  requirements.txt
D03/ex02/: gen_ansible.py
