[tool.poetry]
name = "d03"
version = "0.1.0"
description = ""
authors = ["sdalton <sdalton@student.21-school.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
